--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "ng-select-single-tab",
+  "version": "0.0.1",
   "repository": "ng-select/ng-select",
   "engines": {
     "node": ">= 6.9.0",
