--- a/package.json
+++ b/package.json
@@ -1,6 +1,4 @@
 {
-  "name": "ng-select-single-tab",
-  "version": "0.0.1",
   "repository": "ng-select/ng-select",
   "engines": {
     "node": ">= 6.9.0",
@@ -19,6 +17,7 @@
     "coveralls": "cat ./coverage/ng-select/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "lint": "ng lint ng-select",
     "postpublish": "cp -r dist/ng-select/package.json src/ng-select",
+    "postinstall": "cd ./node_modules/ng-select && npm install && npm run build"
     "release": "semantic-release"
   },
   "release": {
