--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "coveralls": "cat ./coverage/ng-select/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "lint": "ng lint ng-select",
     "postpublish": "cp -r dist/ng-select/package.json src/ng-select",
-    "postinstall": "cd ./node_modules/ng-select && npm install && npm run build"
+    "postinstall": "cd ./node_modules/ng-select && npm install && npm run build",
     "release": "semantic-release"
   },
   "release": {
